--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "7343d82b-d8fc-411f-b5db-c58961d32881"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
