--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@angular/router": "~11.2.4",
     "@popperjs/core": "^2.9.1",
     "bootstrap": "^4.6.0",
-    "firebase": "^8.3.0",
+    "firebase": "^8.2.10",
+    "firebase-admin": "^9.5.0",
     "jquery": "^3.6.0",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^10.15.7",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
