--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~11.2.4",
     "@angular/platform-browser-dynamic": "~11.2.4",
     "@angular/router": "~11.2.4",
+    "@firebase/auth": "^0.16.4",
     "@popperjs/core": "^2.9.1",
     "bootstrap": "^4.6.0",
     "firebase": "^8.2.10",
