--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@angular/router": "~11.2.4",
     "@firebase/auth": "^0.16.4",
     "@popperjs/core": "^2.9.1",
+    "@types/gsap": "^1.20.2",
     "bootstrap": "^4.6.0",
     "firebase": "^8.2.10",
     "firebase-admin": "^9.5.0",
+    "gsap": "^3.6.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.6.0",
     "jsfeat": "0.0.8",
